force-app/main/default/objects/APL_Account_Open_Dispatches__c/APL_Account_Open_Dispatches__c.object-meta.xml
<CustomObject>
    <label>Account Open Dispatches</label>
    <nameField>
        <label>Open Dispatches Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Open Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>