force-app/main/default/objects/APL_Account_Open_Dispatches__c/fields/Account_Master_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Master_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>APL_Account_Open_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>