force-app/main/default/objects/APL_Account_Open_Dispatches__c/fields/priority_code__c.field-meta.xml
<CustomField>
    <fullName>priority_code__c</fullName>
    <label>Priority Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>