force-app/main/default/objects/APL_Account_Open_Dispatches__c/fields/SLA_Category__c.field-meta.xml
<CustomField>
    <fullName>SLA_Category__c</fullName>
    <label>SLA Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>